2005-11-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/score.hh (class Score): remove texts_ member.

	* lily/beam.cc (set_stem_lengths): force direction callback.
	(print): read quantized-positions, so we can force
	Beam::set_stem_lengths to occur.
	(rest_collision_callback): use common X parent. 

2005-11-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/file-path.cc (find): Bugfix: Return name of file found.

	* lily/main.cc (setup_paths): Bugfix for argv0 logic.
	(setup_paths)[__CYGWIN__ || __MINGW32__ || ]: Normalize argv0.
	(setup_paths)[__MINGW32__]: Also look for argv0 + .exe.

2005-11-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* flower/offset.cc: idem.

	* mf/*.mf: update email address.

	* lily/font-config-scheme.cc:  new file.

	* GNUmakefile.in (SUBDIRS): remove debian/ directory.

	* lily/*:  cs.uu.nl -> xs4all.nl

	* VERSION (PATCH_LEVEL): release 2.7.15

	* make/lilypond.mandrake.spec.in (Module): remove Mandrake & Suse
	spec files.

	* make/lilypond.fedora.spec.in: add %{libdir}/lilypond/

2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* GNUmakefile.in: bugfix: encapsulate mkdir && cd in parens.   

	* lily/staff-performer.cc (process_music): add audio
	elements. This makes MIDI instrument changes work once again.

	* lily/main.cc (LY_DEFINE): add gmane address.

	* lily/beam.cc: remove calc_positions()

	* lily/include/grob.hh (class Grob): move pscore, dim_cache_,
	original_ in private scope.
	(class Grob): drop pscore_ pointer, change to output_def pointer.
	(class Grob): cleanup class definition.

	* ly/spanners-init.ly (assertBeamQuant): use make-simple-closure.

2005-11-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (setup_paths)[__MINGW32__]: Do not assume argv0 is
	absolute.  Better diagnostics.

	* GNUmakefile.in: Add bin/ to tree and populate with some links.
	This makes lilypond run from the build directory using argv0
	relocation (without any --prefix or LILYPONDPREFIX setting).
