@@ -1,3 +1,7 @@
+2005-11-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/lily-library.scm (print-music-as-book): quote $defaultparser.
+
 2005-11-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* lily/include/score.hh (class Score): remove texts_ member.
